<resources>
    <string name="app_name">BusKaro</string>
    <string name="bus">Bus</string>
    <string name="karo">Karo</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">1866215143659827</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with">Sign in with:</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_fname">First Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_cpass">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="have_an_account">Have an account?</string>
    <string name="title_activity_user_page">UserPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">fname lname</string>
    <string name="emailid">emailID@buskaro.com</string>
</resources>
